--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,6 @@
         }
         </script>
  
-        <script src="app/home/index.js" type="module"></script>   
+        <script src="/app/home/index.js" type="module"></script>   
     </body>
 </html>
