html fixes, selector updates

--- a/public/index.html
+++ b/public/index.html
@@ -27,14 +27,14 @@
             </div>
         </div>
 
-        <row class="row">
-            <column class="column">
+        <div class="row">
+            <div class="column">
                 <div class="portraitBanner">Advantage</div> <!-- Invisible at start -->
                 <img class="portrait" src="images/unknownChar.jpg" alt="A portrait style image of a random superhero or supervillan">
                 <button class="btn"><strong>RANDOM</strong></button>
                 <button class="btn hiddenBtn"><strong>BATTLE</strong></button>
-            </column>
-            <column class="column">
+            </div>
+            <div class="column">
                 <div class="dialogue blueDialogue">
                     <span class="charName"></span>
                     <ul>
@@ -45,8 +45,8 @@
                         <li>Publisher: <span class="publisher"></span></li>
                     </ul>
                 </div>
-            </column>          
-        </row>
+              </div>          
+          </div>
 
         <!-- IE check (unsupported) -->
         <script>
